terraform_config/coder_terraform_openstack.tf
# terraform {
#   required_providers {
#     coder = {
#       source = "coder/coder"
#     }
#     google = {
#       source = "hashicorp/google"
#     }
#   }
# }

terraform {
    required_version = ">= 0.14.0"
    required_providers {
        coder = {
            source = "coder/coder"
        }
        openstack = {
            source = "terraform-provider-openstack/openstack"
            version = "~> 1.53.0"
        }
    }
}

provider "coder" {
}

# I don't think this is needed for OpenStack, but I'm not sure yet.
variable "project_id" {
  description = "Which Google Compute Project (openstack?) should your workspace live in?"
}

data "coder_parameter" "zone" {
  name         = "zone"
  display_name = "Zone"
  description  = "Which zone should your workspace live in?"
  type         = "string"
  icon         = "/emojis/1f30e.png"
  default      = "us-central1-a"
  mutable      = false
  option {
    name  = "North America (Northeast)"
    value = "northamerica-northeast1-a"
    icon  = "/emojis/1f1fa-1f1f8.png"
  }
  option {
    name  = "North America (Central)"
    value = "us-central1-a"
    icon  = "/emojis/1f1fa-1f1f8.png"
  }
  option {
    name  = "North America (West)"
    value = "us-west2-c"
    icon  = "/emojis/1f1fa-1f1f8.png"
  }
  option {
    name  = "Europe (West)"
    value = "europe-west4-b"
    icon  = "/emojis/1f1ea-1f1fa.png"
  }
  option {
    name  = "South America (East)"
    value = "southamerica-east1-a"
    icon  = "/emojis/1f1e7-1f1f7.png"
  }
}

# provider "google" {
#   zone    = data.coder_parameter.zone.value
#   project = var.project_id
# }

provider "openstack" {
    user_name = "admin"
    tenant_name = "demo"
    password = "commercerellis"
    auth_url = "http://10.0.0.85/identity/v3"
}

# data "google_compute_default_service_account" "default" {
# }

data "coder_workspace" "me" {
}

# resource "google_compute_disk" "root" {
#   name  = "coder-${data.coder_workspace.me.id}-root"
#   type  = "pd-ssd"
#   zone  = data.coder_parameter.zone.value
#   image = "seed-labs-ubuntu"
#   lifecycle {
#     ignore_changes = [name, image]
#   }
# }

resource "openstack_blockstorage_volume_v3" "root" {
  name = "coder-${data.coder_workspace.me.id}-root"
  size = 20  # Size in GB
  # Other configurations like volume type can be added here
}

resource "coder_agent" "main" {

  #auth                   = "google-instance-identity"
  # This is the only value of auth that makes sense I think. See the docs: 
  # https://registry.terraform.io/providers/coder/coder/latest/docs/resources/agent#auth
  auth                   = "token"
  arch                   = "amd64"
  os                     = "linux"
  startup_script_timeout = 180
  startup_script         = <<-EOT
    set -e

    # install and start code-server
    curl -fsSL https://code-server.dev/install.sh | sh -s -- --method=standalone --prefix=/tmp/code-server --version 4.11.0
    /tmp/code-server/bin/code-server --auth none --port 13337 >/tmp/code-server.log 2>&1 &
  EOT

  metadata {
    key          = "cpu"
    display_name = "CPU Usage"
    interval     = 5
    timeout      = 5
    script       = <<-EOT
      #!/bin/bash
      set -e
      top -bn1 | grep "Cpu(s)" | awk '{print $2 + $4 "%"}'
    EOT
  }
  metadata {
    key          = "memory"
    display_name = "Memory Usage"
    interval     = 5
    timeout      = 5
    script       = <<-EOT
      #!/bin/bash
      set -e
      free -m | awk 'NR==2{printf "%.2f%%\t", $3*100/$2 }'
    EOT
  }
  metadata {
    key          = "disk"
    display_name = "Disk Usage"
    interval     = 600 # every 10 minutes
    timeout      = 30  # df can take a while on large filesystems
    script       = <<-EOT
      #!/bin/bash
      set -e
      df /home/coder | awk '$NF=="/"{printf "%s", $5}'
    EOT
  }
}

# code-server
resource "coder_app" "code-server" {
  agent_id     = coder_agent.main.id
  slug         = "code-server"
  display_name = "code-server"
  icon         = "/icon/code.svg"
  url          = "http://localhost:13337?folder=/home/coder"
  subdomain    = false
  share        = "owner"

  healthcheck {
    url       = "http://localhost:13337/healthz"
    interval  = 3
    threshold = 10
  }
}

# resource "google_compute_instance" "dev" {
#   zone         = data.coder_parameter.zone.value
#   count        = data.coder_workspace.me.start_count
#   name         = "coder-${lower(data.coder_workspace.me.owner)}-${lower(data.coder_workspace.me.name)}-root"
#   machine_type = "e2-medium"
#   network_interface {
#     network = "default"
#     access_config {
#       // Ephemeral public IP
#     }
#   }
#   boot_disk {
#     auto_delete = false
#     source      = google_compute_disk.root.name
#   }
#   service_account {
#     email  = data.google_compute_default_service_account.default.email
#     scopes = ["cloud-platform"]
#   }
#   # The startup script runs as root with no $HOME environment set up, so instead of directly
#   # running the agent init script, create a user (with a homedir, default shell and sudo
#   # permissions) and execute the init script as that user.
#   metadata_startup_script = <<EOMETA
# #!/usr/bin/env sh
# set -eux

# # If user does not exist, create it and set up passwordless sudo
# if ! id -u "${local.linux_user}" >/dev/null 2>&1; then
#   useradd -m -s /bin/bash "${local.linux_user}"
#   echo "${local.linux_user} ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/coder-user
# fi

# exec sudo -u "${local.linux_user}" sh -c '${coder_agent.main.init_script}'
# EOMETA
# }


resource "openstack_compute_instance_v2" "test" {
    name = "alpine-test-vn"
    image_name = "alpine-test" # This was what I named the image that I uploaded
    flavor_name = "m1.small"
    admin_pass = "commercerellis" #Should use SSH keys but im lazy. Look at guide for how to use keys
    security_groups = ["default"]
network {
    name = "private" # Go to dashboard > Compute > networks to see available networks
}


block_device {
    uuid                  = openstack_blockstorage_volume_v3.root.id
    source_type           = "volume"
    destination_type      = "volume"
    boot_index            = 0
    delete_on_termination = false
  }
  user_data = <<EOMETA
#!/usr/bin/env sh
set -eux

# If user does not exist, create it and set up passwordless sudo
if ! id -u "${local.linux_user}" >/dev/null 2>&1; then
  useradd -m -s /bin/bash "${local.linux_user}"
  echo "${local.linux_user} ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/coder-user
fi

exec sudo -u "${local.linux_user}" sh -c '${coder_agent.main.init_script}'
EOMETA
}







locals {
  # Ensure Coder username is a valid Linux username
  linux_user = lower(substr(data.coder_workspace.me.owner, 0, 32))
}


# resource "coder_metadata" "workspace_info" {
#   count       = data.coder_workspace.me.start_count
#   resource_id = google_compute_instance.dev[0].id

#   item {
#     key   = "type"
#     value = google_compute_instance.dev[0].machine_type
#   }
# }

resource "coder_metadata" "workspace_info" {
  count       = data.coder_workspace.me.start_count
  resource_id = openstack_compute_instance_v2.test[0].id

  item {
    key   = "type"
    value = openstack_compute_instance_v2.test[0].machine_type
  }
}

# resource "coder_metadata" "home_info" {
#   resource_id = google_compute_disk.root.id

#   item {
#     key   = "size"
#     value = "${google_compute_disk.root.size} GiB"
#   }
# }

resource "coder_metadata" "home_info" {
  resource_id = openstack_blockstorage_volume_v3.root.id

  item {
    key   = "size"
    value = "${openstack_blockstorage_volume_v3.root.size} GiB"
  }
}
